# EMvidence

./: README.md
EMvidence/: authfunctions.py  clear.sh  dataCaptureFunctions.py  database.py  emvidence-cli.py  emvidence-database.db  emvidence.config  main.py  start.sh
EMvidence/data/: temp-em-data.npy
EMvidence/emvincelib/: iq.py  ml.py
EMvidence/emvincelib/etc/: iq.py
EMvidence/module-skeletons/dummy-module/: config.config
EMvidence/modules/dummy-module-1/: main.py
EMvidence/sdr-drivers/: cosine_cfile.py  hackrf_cfile.py  rtlsdr_cfile.py  sdr_driver.py
EMvidence/sdr-drivers/etc/: hackrf_zmq_pub.py
EMvidence/sdr-drivers/grc-scripts/: cosine_cfile.grc  hackrf_cfile.grc  rtlsdr_cfile.grc
EMvidence/static/css/: analyse-data.css  capture-data.css  dashboard.css  login.css  main-toolbar.css  settings.css  upload-data.css
EMvidence/static/js/: analyse-data.js  capture-data.js  login.js  main-toolbar.js  settings.js  upload-data.js
EMvidence/templates/: about.html  analyse-data.html  analysis_report_view_iframe.html  capture-data.html  captured_data_view_iframe.html  dashboard.html  login.html  main-toolbar.html  report-template.html  settings.html  upload-data.html
backyard/: readme.txt
backyard/default-modules/mod-visualizer/: README.txt  config.config  main.py  ml-model.joblib
backyard/module-skeletons/dummy-module/: main.py
emvidence-gui/: database.py  emvidence-database.db  emvidence.config  main.py
emvidence-gui/data/: temp-em-data-from-rtlsdr.npy  temp-em-data.npy
emvidence-gui/emvincelib/: iq.py  stat.py
emvidence-gui/modules/dummy-module-2/: main.py
emvidence-gui/modules/module-2/: config.config  main.py
emvidence-gui/sdr-drivers/: cosine-wave-zmq-pub-sink-20MHz.grc.grc  top_block.py
emvidence-gui/sdr-drivers/etc/: cosine_wave_zmq_pub.py
emvidence-gui/templates/: analyse-data.html  capture-data.html  dashboard.html  login.html  main-toolbar.html  settings.html
etc/Code_Upload/GUI/: HISTORY.rst  Licences.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
etc/Code_Upload/GUI/docs/: Makefile  conf.py  index.rst  maingui.WebStorage.rst  make.bat  modules.rst  usage.rst
etc/Code_Upload/GUI/docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  maingui.RFSource.RadioInterface.doctree  maingui.RFSource.doctree  maingui.WebStorage.doctree  maingui.doctree  modules.doctree  readme.doctree  usage.doctree
etc/Code_Upload/GUI/docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  maingui.RFSource.RadioInterface.html  maingui.RFSource.html  maingui.WebStorage.html  maingui.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
etc/Code_Upload/GUI/docs/_build/html/_modules/: index.html  maingui.html
etc/Code_Upload/GUI/docs/_build/html/_modules/maingui/: RFSource.html  WebStorage.html  classifiers.html  logindialog.html  mainwindow.html  partfinder.html  report_generation.html  settings.html
etc/Code_Upload/GUI/docs/_build/html/_modules/maingui/RFSource/RadioInterface/: radio_interface.html
etc/Code_Upload/GUI/docs/_build/html/_sources/: installation.rst.txt  maingui.RFSource.RadioInterface.rst.txt  maingui.RFSource.rst.txt  maingui.rst.txt
etc/Code_Upload/GUI/maingui/: .directory  __init__.py  classifiers.py  logindialog.py  mainwindow.py  partfinder.py  report_generation.py  settings.py
etc/Code_Upload/GUI/maingui/RFSource/: __init__.py
etc/Code_Upload/GUI/maingui/RFSource/RadioInterface/: DemoGUI.grc  radio_hw_demo.grc  radio_hw_demo.py  radio_hw_hackrf_one.grc  radio_interface.py
etc/Code_Upload/GUI/maingui/WebStorage/: __init__.py
etc/Code_Upload/GUI/maingui/classifiers/: __init__.py  ie.ucd.compsci.project1.result1.clf  ie.ucd.compsci.project1.result1.json
etc/Code_Upload/GUI/maingui/database/: part_database.json
etc/Code_Upload/GUI/maingui/scripts/: example_table.py  example_table_so.py  examplewindow.py  sample_py.py
etc/Code_Upload/GUI/tests/: __init__.py  test_classifier_loading.py  test_maingui2.py
etc/Code_Upload/Server/: create_symlinks.sh  db.sqlite3  manage.py
etc/Code_Upload/UC_Code/ADuCm4050/: build_script.sh  cross_file.txt  meson.build  meson_options.txt  system.rteconfig  system.svc  test_cog.hex
etc/Code_Upload/UC_Code/ADuCm4050/RTE/: RTE_Components.h  meson.build
etc/Code_Upload/UC_Code/ADuCm4050/RTE/Device/ADuCM3029/: ADuCM3029.ld  adi_uart_config.h  startup_ADuCM3029.c  system_ADuCM3029.c
etc/Code_Upload/UC_Code/ADuCm4050/RTE/Device/ADuCM4050/: ADuCM4050.ld  adi_pwr_config.h  adi_rng_config.h  adi_spi_config.h  adi_tmr_config.h  adi_uart_config.h  reset_ADuCM4050.S  startup_ADuCM4050.c  system_ADuCM4050.c  system_ADuCM4050.h
etc/Code_Upload/UC_Code/ADuCm4050/include/: .directory  adf_spi.h  adf_timers.h  adf_uart.h  common_debug.h  crc.h  hardware_platform.h  leds.h  main.h  map.h  random.h  statemachine_gui.h  uart_buffer.h
etc/Code_Upload/UC_Code/ADuCm4050/include/interface/: interface.h  interface_uctest.h
etc/Code_Upload/UC_Code/ADuCm4050/include/uctest/: uc_calculations.h  uc_loops.h  uc_uecc.h
etc/Code_Upload/UC_Code/ADuCm4050/include/uecc/: .directory
etc/Code_Upload/UC_Code/ADuCm4050/src/: .directory  adf_spi.c  adf_timers.c  adf_uart.c  crc.c  interface.c  interface_uctest.c  leds.c  main.c  map.c  pinmux_config.c  random.c  statemachine.c  uart_buffer.c
etc/Code_Upload/UC_Code/ADuCm4050/src/uctest/: uc_calculations.c  uc_loops.c  uc_uecc.c
etc/Code_Upload/UC_Code/ADuCm4050/src/uecc/: .directory  uECC.c
etc/Code_Upload/UC_Code/ADuCm4050/system/: adi_initialize.c  adi_initialize.h
etc/Code_Upload/UC_Code/ADuCm4050/tests/: test_board_id.py  test_cmd.py  test_read_mem.py  test_timeout_error.py
etc/Code_Upload/uctest_python/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  (+2 more)
etc/emvidence-gui/: start.sh
flask-website/: flaskhello.py
flask-website/templates/: index.html
module-skeletons/dummy-module/: main.py
(+73 files in other folders)
